--- a/index.html
+++ b/index.html
@@ -41,20 +41,14 @@
             font-style: italic;
             font-size: 1.15rem;
             color: #6a5d4a;
-            margin-bottom: 1rem;
+            margin-bottom: 2.5rem;
             line-height: 1.7;
-        }
-        .hero-tagline {
-            font-family: 'Inter', sans-serif;
-            font-size: 0.9rem;
-            color: #8a7a5a;
-            line-height: 1.6;
         }
         .divider {
             width: 60px;
             height: 1px;
             background: linear-gradient(90deg, transparent, #c9a96e, transparent);
-            margin: 2.5rem auto;
+            margin: 2rem auto;
         }
         .container {
             max-width: 640px;
@@ -71,125 +65,43 @@
             margin-bottom: 1rem;
             color: #1a1510;
         }
-        h3 {
-            font-size: 1.1rem;
-            font-weight: 600;
-            margin-top: 2rem;
-            margin-bottom: 0.6rem;
-            color: #1a1510;
-        }
-        .principle {
-            border-left: 3px solid #c9a96e;
-            padding: 1.2rem 1.5rem;
-            margin: 1.5rem 0;
-            background: #f5f0ea;
-            border-radius: 0 6px 6px 0;
-        }
-        .principle-num {
-            font-family: 'Inter', sans-serif;
-            font-size: 0.7rem;
-            text-transform: uppercase;
-            letter-spacing: 0.15em;
-            color: #c9a96e;
-            margin-bottom: 0.4rem;
-        }
-        .principle p {
-            margin-bottom: 0;
-            font-style: italic;
-            color: #3a3025;
-        }
         .details-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 1rem;
+            grid-template-columns: 1fr 1fr;
+            gap: 1.5rem;
             margin: 2rem 0;
-            padding: 1.5rem;
+            padding: 2rem;
             background: #f3efe8;
             border-radius: 8px;
-            text-align: center;
         }
+        .detail { text-align: center; }
         .detail-label {
             font-family: 'Inter', sans-serif;
-            font-size: 0.65rem;
+            font-size: 0.7rem;
             text-transform: uppercase;
             letter-spacing: 0.14em;
             color: #8a7a5a;
             margin-bottom: 0.3rem;
         }
-        .detail-value {
-            font-size: 0.95rem;
-            color: #3a3025;
-        }
-        .session-block {
-            margin: 1.5rem 0;
-            padding: 1.5rem;
-            border: 1px solid #e8e0d0;
-            border-radius: 8px;
-            background: #fdfbf8;
-        }
-        .session-label {
-            font-family: 'Inter', sans-serif;
-            font-size: 0.7rem;
-            text-transform: uppercase;
-            letter-spacing: 0.14em;
-            color: #c9a96e;
-            margin-bottom: 0.5rem;
-        }
-        .session-block h3 {
-            margin-top: 0;
-            margin-bottom: 0.8rem;
-        }
+        .detail-value { font-size: 1.05rem; color: #3a3025; }
         ul {
-            margin: 0.8rem 0 0.5rem 1rem;
+            margin: 1rem 0 1.2rem 1.2rem;
             list-style: none;
         }
         ul li {
-            margin-bottom: 0.5rem;
-            font-size: 1rem;
-            padding-left: 0.3rem;
+            margin-bottom: 0.7rem;
+            font-size: 1.05rem;
+            padding-left: 0.5rem;
         }
-        ul li::before {
-            content: "✧ ";
-            color: #c9a96e;
-        }
-        .homework-note {
-            margin-top: 1rem;
-            padding: 0.8rem 1rem;
-            background: #f0ebe0;
-            border-radius: 4px;
-            font-size: 0.9rem;
+        ul li::before { content: "✧ "; color: #c9a96e; }
+        blockquote {
+            border-left: 3px solid #c9a96e;
+            padding: 1rem 1.5rem;
+            margin: 2rem 0;
             font-style: italic;
             color: #5a5045;
-        }
-        .pathways {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 1.5rem;
-            margin: 1.5rem 0;
-        }
-        .pathway {
-            padding: 1.5rem;
-            border: 1px solid #e8e0d0;
-            border-radius: 8px;
-        }
-        .pathway-tag {
-            font-family: 'Inter', sans-serif;
-            font-size: 0.65rem;
-            text-transform: uppercase;
-            letter-spacing: 0.12em;
-            color: #8a7a5a;
-            margin-bottom: 0.5rem;
-        }
-        .pathway h3 {
-            font-size: 1rem;
-            margin-top: 0;
-            margin-bottom: 0.6rem;
-        }
-        .pathway p {
-            font-size: 0.9rem;
-            margin-bottom: 0;
-            color: #5a5045;
-            line-height: 1.6;
+            background: #f5f0ea;
+            border-radius: 0 6px 6px 0;
         }
         .bios {
             display: grid;
@@ -198,17 +110,47 @@
             margin: 2rem 0;
         }
         .bio { text-align: center; }
-        .bio-name { font-size: 1.05rem; font-weight: 600; color: #1a1510; margin-bottom: 0.2rem; }
-        .bio-role { font-family: 'Inter', sans-serif; font-size: 0.75rem; color: #8a7a5a; margin-bottom: 0.8rem; }
-        .bio p { font-size: 0.92rem; line-height: 1.7; color: #5a5045; }
+        .bio-name { font-size: 1.1rem; font-weight: 600; color: #1a1510; margin-bottom: 0.3rem; }
+        .bio-role { font-family: 'Inter', sans-serif; font-size: 0.8rem; color: #8a7a5a; margin-bottom: 0.8rem; }
+        .bio p { font-size: 0.95rem; line-height: 1.7; }
+        .pricing-block {
+            margin: 2rem 0;
+            border: 1px solid #e8e0d0;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        .pricing-tier {
+            padding: 1.5rem 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .pricing-tier + .pricing-tier {
+            border-top: 1px solid #e8e0d0;
+        }
+        .pricing-tier.early-bird { background: #f5f0ea; }
+        .pricing-tier.full-price { background: #fdfbf8; }
+        .tier-label {
+            font-family: 'Inter', sans-serif;
+        }
+        .tier-name {
+            font-size: 0.95rem;
+            font-weight: 500;
+            color: #1a1510;
+            margin-bottom: 0.2rem;
+        }
+        .tier-window {
+            font-size: 0.78rem;
+            color: #8a7a5a;
+        }
+        .tier-price {
+            font-family: 'Lora', serif;
+            font-size: 1.5rem;
+            color: #c9a96e;
+        }
         .cta-section {
             text-align: center;
-            padding: 3rem 0 1rem;
-        }
-        .cta-section p {
-            font-style: italic;
-            color: #6a5d4a;
-            margin-bottom: 2rem;
+            padding: 2.5rem 0;
         }
         .cta-btn {
             display: inline-block;
@@ -222,8 +164,6 @@
             text-transform: uppercase;
             text-decoration: none;
             border-radius: 4px;
-            cursor: pointer;
-            border: none;
             transition: all 0.3s ease;
         }
         .cta-btn:hover { background: #c9a96e; color: #1a1510; }
@@ -242,112 +182,105 @@
         .footer a { color: #8a6d3b; text-decoration: none; border-bottom: 1px solid #c9a96e; }
         @media (max-width: 580px) {
             h1 { font-size: 2rem; }
-            .details-grid { grid-template-columns: 1fr 1fr; }
-            .pathways { grid-template-columns: 1fr; }
+            .details-grid { grid-template-columns: 1fr; }
             .bios { grid-template-columns: 1fr; }
+            .pricing-tier { flex-direction: column; gap: 0.5rem; text-align: center; }
         }
     </style>
 </head>
 <body>
 
     <div class="hero">
-        <div class="eyebrow">A short course — Daniel Thorson & Michal Tolk</div>
+        <div class="eyebrow">A short course with Daniel Thorson & Michal Tolk</div>
         <h1>Values-Aligned AI</h1>
-        <div class="subtitle">How to think about and build with AI from first principles — so that the tools serve your life, not the other way around.</div>
+        <div class="subtitle">Building systems that serve your life — not the other way around.</div>
     </div>
 
     <div class="divider"></div>
 
     <div class="container">
 
-        <p>Most AI advice is about doing more, faster. This course is about something different.</p>
+        <p>AI is changing everything. But most of what's being taught about AI is about <strong>productivity</strong> — doing more, faster, with less friction.</p>
 
-        <p>AI tools change constantly. What worked six months ago is already outdated. If you build your practice around any specific tool or system, you'll be rebuilding it every year. What doesn't change is how you think — and how clearly you can articulate what you actually want.</p>
+        <p>We're interested in a different question: <em>What if AI could help you live a more beautiful life?</em></p>
 
-        <p>This is a course about that: <strong>developing a first-principles relationship with AI</strong> that transcends any particular platform, so that whatever comes next, you're ready for it.</p>
+        <p>Not a more optimized life. Not a more efficient life. A life more aligned with what you actually care about — your values, your relationships, your health, your creative work, your spiritual practice.</p>
 
-        <p>We've each built AI systems for our own lives — not as tech experiments, but as genuine practices of aligning our tools with our deepest intentions. We've learned that the most powerful thing you can do is not learn a better prompt. It's <strong>learn to be clearer about what you actually desire</strong>.</p>
+        <p>We've spent the last year building AI systems for ourselves — not as a tech experiment, but as a genuine practice of aligning our tools with our deepest intentions. What we've discovered has surprised us. These systems don't just save time. They <strong>mirror back what matters</strong>. They surface what you're avoiding. They hold the threads you keep dropping.</p>
 
-        <div class="divider"></div>
-
-        <h2>Two Principles</h2>
-
-        <div class="principle">
-            <div class="principle-num">Principle One</div>
-            <p>Go up a layer of abstraction. Don't learn the tool — learn to think at the level above it. That's what makes you adaptable as everything changes.</p>
-        </div>
-
-        <div class="principle">
-            <div class="principle-num">Principle Two</div>
-            <p>Get the AI to ask you questions. The AI's job is not to give you answers — it's to evoke your clarity. Learning to use it this way transforms the whole relationship.</p>
-        </div>
-
-        <p>Underneath both of these is one core skill: <em>speaking the truth of what you want</em>. The more clearly you can articulate your actual desires — not what you think you should want, but what you genuinely long for — the more powerfully AI can serve you. Clarity is the leverage point.</p>
-
-        <div class="divider"></div>
-
-        <h2>What We'll Do Together</h2>
+        <p>In this short course, we'll share what we've learned and give you the space to build your own.</p>
 
         <div class="details-grid">
-            <div>
+            <div class="detail">
                 <div class="detail-label">Format</div>
-                <div class="detail-value">2 live sessions</div>
+                <div class="detail-value">Two 90-minute sessions</div>
             </div>
-            <div>
-                <div class="detail-label">Each session</div>
-                <div class="detail-value">90 minutes</div>
+            <div class="detail">
+                <div class="detail-label">Duration</div>
+                <div class="detail-value">Two weeks</div>
             </div>
-            <div>
-                <div class="detail-label">Cohort size</div>
+            <div class="detail">
+                <div class="detail-label">Cohort</div>
                 <div class="detail-value">~12 people</div>
             </div>
-            <div>
-                <div class="detail-label">Investment</div>
-                <div class="detail-value">$500</div>
+            <div class="detail">
+                <div class="detail-label">Setting</div>
+                <div class="detail-value">Live on Zoom</div>
             </div>
         </div>
 
-        <div class="session-block">
-            <div class="session-label">Session One</div>
-            <h3>The View</h3>
-            <ul>
-                <li>The first-principles framework — how to think about AI at the level above the tools</li>
-                <li>Why clarity of desire is the core skill</li>
-                <li>A live experiment: using AI in a specific way to evoke your own clarity</li>
-                <li>Introduction to the two recommended pathways</li>
-            </ul>
-            <div class="homework-note">
-                <strong>Homework:</strong> Build a first pass at a "life architecture system" — a structured space that reflects your values, desires, and intentions, and that you can bring into conversation with AI.
-            </div>
-        </div>
+        <h2>What We'll Cover</h2>
 
-        <div class="session-block">
-            <div class="session-label">Session Two</div>
-            <h3>Reflection & Troubleshooting</h3>
-            <ul>
-                <li>Share what you built and what you noticed</li>
-                <li>How is the system actually feeling? Where is it working?</li>
-                <li>Troubleshoot together — we learn from each other's friction</li>
-                <li>What's next: keeping the system alive and evolving</li>
-            </ul>
-        </div>
+        <p><strong>Session 1: The View</strong></p>
+        <ul>
+            <li>Why most AI advice misses what matters</li>
+            <li>What "values-aligned" actually means in practice</li>
+            <li>How we built systems that reflect our values — not just our to-do lists</li>
+            <li>A live experiment: using AI in a specific way to evoke your own clarity</li>
+            <li>Hands-on: beginning to design your own system</li>
+        </ul>
+
+        <p><strong>Session 2: Reflection & Build</strong></p>
+        <ul>
+            <li>Share what you built and what you noticed</li>
+            <li>Troubleshoot together — we learn from each other's friction</li>
+            <li>Two pathways: Notion + Claude (simple) or a full agent setup (advanced)</li>
+            <li>How to keep your system alive and evolving</li>
+        </ul>
+
+        <blockquote>
+            <p>This isn't a course about prompts or productivity hacks. It's about learning to use the most powerful tools ever created in service of what you actually love.</p>
+        </blockquote>
+
+        <h2>Who This Is For</h2>
+
+        <p>You don't need to be technical. You don't need prior AI experience. You just need to care about living deliberately — and be curious about whether these tools could support that.</p>
+
+        <ul>
+            <li>Coaches, healers, and practitioners who want AI that fits their values</li>
+            <li>Writers, creatives, and entrepreneurs building a life around meaning</li>
+            <li>Anyone who feels the pull of AI but doesn't want to lose their soul to it</li>
+            <li>Couples or partners who want to build shared systems together</li>
+        </ul>
 
         <div class="divider"></div>
 
-        <h2>Two Pathways</h2>
+        <h2>Investment</h2>
 
-        <p>This course is systems-agnostic. You don't need any particular tool. But we offer two recommended starting points:</p>
-
-        <div class="pathways">
-            <div class="pathway">
-                <div class="pathway-tag">Accessible · Recommended for most</div>
-                <h3>Notion + Claude</h3>
-                <p>Build your life architecture system in Notion, connected to Claude via MCP. Simple, powerful, and requires no technical setup. This is Michal's approach.</p>
+        <div class="pricing-block">
+            <div class="pricing-tier early-bird">
+                <div class="tier-label">
+                    <div class="tier-name">Early Bird</div>
+                    <div class="tier-window">First week of registration</div>
+                </div>
+                <div class="tier-price">$350</div>
             </div>
-            <div class="pathway">
-                <div class="pathway-tag">Advanced · For the technically curious</div>
-                <h3>Full Agent Setup</h3>
-                <p>Build or configure a persistent AI agent — a "Claude of your own." We'll help you understand the options, differences, and real risks. This is Daniel's approach.</p>
+            <div class="pricing-tier full-price">
+                <div class="tier-label">
+                    <div class="tier-name">Full Price</div>
+                    <div class="tier-window">Week two onwards</div>
+                </div>
+                <div class="tier-price">$450</div>
             </div>
         </div>
 
@@ -359,21 +292,18 @@
             <div class="bio">
                 <div class="bio-name">Daniel Thorson</div>
                 <div class="bio-role">Writer · Coach · The Intimate Mirror</div>
-                <p>Daniel writes about meaning, transformation, and intimacy at the edge of a new world. He's built a fully custom AI system for his coaching practice, writing life, and daily contemplative rhythm.</p>
+                <p>Daniel writes about meaning, transformation, and intimacy at the edge of a new world. He's built AI systems that support his coaching practice, writing life, and daily contemplative rhythm.</p>
             </div>
             <div class="bio">
                 <div class="bio-name">Michal Tolk</div>
                 <div class="bio-role">Somatic Healer · Coach · Cries in the Wilderness</div>
-                <p>Michal is a somatic practitioner, spiritual counselor, and embodiment coach. She's built AI systems that support her practice, her creative work, and her commitment to sacred alignment.</p>
+                <p>Michal is a somatic practitioner, spiritual counselor, and embodiment coach. She's built AI systems that support her practice, her creative life, and her commitment to living in sacred alignment.</p>
             </div>
         </div>
 
-        <div class="divider"></div>
-
         <div class="cta-section">
-            <p>Space is limited to 12 participants. Dates to be announced.</p>
-            <a href="STRIPE_LINK_HERE" class="cta-btn">Reserve Your Spot — $500</a>
-            <div class="price-note">Secure checkout via Stripe. Full payment reserves your place.</div>
+            <a href="STRIPE_LINK_HERE" class="cta-btn">Reserve Your Spot</a>
+            <div class="price-note">Secure checkout via Stripe · Limited to 12 participants</div>
         </div>
 
     </div>
