Rewrite copy for AI-newcomers: warm, relational, non-intimidating

--- a/index.html
+++ b/index.html
@@ -200,15 +200,15 @@
 
     <div class="container">
 
-        <p>AI is changing everything. But most of what's being taught about AI is about <strong>productivity</strong> — doing more, faster, with less friction.</p>
+        <p>Maybe you've heard a lot about AI and felt vaguely like it isn't for you. Like it's a tool for tech people, or productivity obsessives, or people with a very different kind of life than yours.</p>
 
-        <p>We're interested in a different question: <em>What if AI could help you live a more beautiful life?</em></p>
+        <p>We felt that way too, for a long time.</p>
 
-        <p>Not a more optimized life. Not a more efficient life. A life more aligned with what you actually care about — your values, your relationships, your health, your creative work, your spiritual practice.</p>
+        <p>What changed for us wasn't finding a better app or a more impressive demo. It was discovering that <em>AI can actually listen</em> — that if you learn to talk to it in a particular way, it reflects back your own thinking with a kind of clarity that's genuinely hard to find elsewhere. It asks you questions. It helps you hear yourself.</p>
 
-        <p>We've spent the last year building AI systems for ourselves — not as a tech experiment, but as a genuine practice of aligning our tools with our deepest intentions. What we've discovered has surprised us. These systems don't just save time. They <strong>mirror back what matters</strong>. They surface what you're avoiding. They hold the threads you keep dropping.</p>
+        <p>For coaches, healers, writers, and people doing meaningful work in the world, that turns out to be <strong>remarkably useful</strong>. Not for doing more. For living better.</p>
 
-        <p>In this short course, we'll share what we've learned and give you the space to build your own.</p>
+        <p>This course is a gentle on-ramp. Two sessions, a small group, two guides who will walk in alongside you. No technical background required. No pressure to become an AI person. Just an honest exploration of whether this tool might quietly support the life you're already trying to live.</p>
 
         <div class="details-grid">
             <div class="detail">
@@ -229,38 +229,39 @@
             </div>
         </div>
 
-        <h2>What We'll Cover</h2>
+        <h2>What We'll Do Together</h2>
 
-        <p><strong>Session 1: The View</strong></p>
+        <p><strong>Session 1: Finding Your Way In</strong></p>
         <ul>
-            <li>Why most AI advice misses what matters</li>
-            <li>What "values-aligned" actually means in practice</li>
-            <li>How we built systems that reflect our values — not just our to-do lists</li>
-            <li>A live experiment: using AI in a specific way to evoke your own clarity</li>
-            <li>Hands-on: beginning to design your own system</li>
+            <li>How to have a real conversation with AI — not just issue commands</li>
+            <li>Learning to ask for what you actually want (this is harder and more powerful than it sounds)</li>
+            <li>A live experiment together: you'll leave having felt what this can actually do</li>
+            <li>Beginning to sketch what your own system might look like</li>
         </ul>
 
-        <p><strong>Session 2: Reflection & Build</strong></p>
+        <p><strong>Between sessions</strong></p>
+        <p style="margin-left: 1.2rem; font-style: italic; color: #5a5045; font-size: 1rem;">A simple homework: using what you learned, begin building a space in Notion that reflects your values, your intentions, and your life — a place you can bring into ongoing conversation with AI.</p>
+
+        <p><strong>Session 2: What Did You Notice?</strong></p>
         <ul>
-            <li>Share what you built and what you noticed</li>
-            <li>Troubleshoot together — we learn from each other's friction</li>
-            <li>Two pathways: Notion + Claude (simple) or a full agent setup (advanced)</li>
-            <li>How to keep your system alive and evolving</li>
+            <li>We share what we built and what happened</li>
+            <li>Troubleshoot together — the stuck places are where the learning lives</li>
+            <li>How to keep going from here</li>
         </ul>
 
         <blockquote>
-            <p>This isn't a course about prompts or productivity hacks. It's about learning to use the most powerful tools ever created in service of what you actually love.</p>
+            <p>The goal isn't to become someone who's "good at AI." It's to find out whether this tool can quietly support the life you're already trying to live.</p>
         </blockquote>
 
         <h2>Who This Is For</h2>
 
-        <p>You don't need to be technical. You don't need prior AI experience. You just need to care about living deliberately — and be curious about whether these tools could support that.</p>
+        <p>This course is for people who sense that AI might be relevant to their lives — but haven't found a way in that feels like them.</p>
 
         <ul>
-            <li>Coaches, healers, and practitioners who want AI that fits their values</li>
-            <li>Writers, creatives, and entrepreneurs building a life around meaning</li>
-            <li>Anyone who feels the pull of AI but doesn't want to lose their soul to it</li>
-            <li>Couples or partners who want to build shared systems together</li>
+            <li>Coaches, therapists, healers, and practitioners</li>
+            <li>Writers and creative people</li>
+            <li>Anyone doing meaningful work who wants more support, not more noise</li>
+            <li>People who are curious but overwhelmed — and would rather learn in good company</li>
         </ul>
 
         <div class="divider"></div>
