Add Stripe payment links — early bird  + full price

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             transition: all 0.3s ease;
         }
         .cta-btn:hover { background: #c9a96e; color: #1a1510; }
+        .tier-btn { margin-top: 1rem; padding: 0.65rem 1.5rem; font-size: 0.78rem; }
         .price-note {
             margin-top: 1rem;
             font-family: 'Inter', sans-serif;
@@ -275,6 +276,7 @@
                     <div class="tier-window">First week of registration</div>
                 </div>
                 <div class="tier-price">$350</div>
+                <a href="https://buy.stripe.com/fZu5kD2tBgyzecN6LB0gw00" class="cta-btn tier-btn">Enroll — $350</a>
             </div>
             <div class="pricing-tier full-price">
                 <div class="tier-label">
@@ -282,6 +284,7 @@
                     <div class="tier-window">Week two onwards</div>
                 </div>
                 <div class="tier-price">$450</div>
+                <a href="https://buy.stripe.com/00w8wPc4b6XZc4F1rh0gw01" class="cta-btn tier-btn">Enroll — $450</a>
             </div>
         </div>
 
@@ -303,7 +306,7 @@
         </div>
 
         <div class="cta-section">
-            <a href="STRIPE_LINK_HERE" class="cta-btn">Reserve Your Spot</a>
+            <a href="https://buy.stripe.com/fZu5kD2tBgyzecN6LB0gw00" class="cta-btn">Reserve Your Spot — $350 Early Bird</a>
             <div class="price-note">Secure checkout via Stripe · Limited to 12 participants</div>
         </div>
 
