--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
 
         <p>We felt that way too, for a long time.</p>
 
-        <p>What changed for us wasn't finding a better app or a more impressive demo. It was discovering that <em>AI can actually listen</em> — that if you learn to talk to it in a particular way, it reflects back your own thinking with a kind of clarity that's genuinely hard to find elsewhere. It asks you questions. It helps you hear yourself.</p>
+        <p>What changed for us wasn't finding a better app or a more impressive demo. It was discovering that <em>AI can actually listen</em> — that if you learn to talk to it in a particular way, it reflects back your own thinking with a clarity that's genuinely hard to find elsewhere. It asks good questions. It helps you hear what you actually want.</p>
 
         <p>For coaches, healers, writers, and people doing meaningful work in the world, that turns out to be <strong>remarkably useful</strong>. Not for doing more. For living better.</p>
 
-        <p>This course is a gentle on-ramp. Two sessions, a small group, two guides who will walk in alongside you. No technical background required. No pressure to become an AI person. Just an honest exploration of whether this tool might quietly support the life you're already trying to live.</p>
+        <p>This course is a gentle on-ramp. Two sessions, a small group, two guides who will walk in alongside you. No technical background required. No pressure to become an AI person. Just an honest exploration of whether this tool might support the life you're already trying to live.</p>
 
         <div class="details-grid">
             <div class="detail">
@@ -236,22 +236,23 @@
         <ul>
             <li>How to have a real conversation with AI — not just issue commands</li>
             <li>Learning to ask for what you actually want (this is harder and more powerful than it sounds)</li>
-            <li>A live experiment together: you'll leave having felt what this can actually do</li>
-            <li>Beginning to sketch what your own system might look like</li>
+            <li>A few simple ideas for orienting yourself — how to think about context, how to let the conversation clarify what you're after, why speaking out loud often works better than typing</li>
+            <li>A first look at building a simple life system grounded in your values and intentions</li>
+            <li>A live exploration together: you'll leave having felt what this can actually do</li>
         </ul>
 
-        <p><strong>Between sessions</strong></p>
-        <p style="margin-left: 1.2rem; font-style: italic; color: #5a5045; font-size: 1rem;">A simple homework: using what you learned, begin building a space in Notion that reflects your values, your intentions, and your life — a place you can bring into ongoing conversation with AI.</p>
+        <p><strong>Between Sessions</strong></p>
+        <p style="margin-left: 1.2rem; font-style: italic; color: #5a5045; font-size: 1rem;">A simple homework: using what you learned, begin building a space that reflects your values, your intentions, and your life — somewhere you can return to and deepen over time.</p>
 
         <p><strong>Session 2: What Did You Notice?</strong></p>
         <ul>
-            <li>We share what we built and what happened</li>
+            <li>We share what we built and what we noticed</li>
             <li>Troubleshoot together — the stuck places are where the learning lives</li>
             <li>How to keep going from here</li>
         </ul>
 
         <blockquote>
-            <p>The goal isn't to become someone who's "good at AI." It's to find out whether this tool can quietly support the life you're already trying to live.</p>
+            <p>The goal isn't to become someone who's "good at AI." It's to find out whether this tool can support the life you're already trying to live.</p>
         </blockquote>
 
         <h2>Who This Is For</h2>
