--- a/index.html
+++ b/index.html
@@ -353,8 +353,7 @@
         <p class="fade-up"><strong>Session 1: Finding Your Way In</strong></p>
         <ul class="fade-up">
             <li>How to have a real conversation with AI — not just issue commands</li>
-            <li>Learning to ask for what you actually want (this is harder and more powerful than it sounds)</li>
-            <li>A few simple ideas for orienting yourself — how to think about context, how to let the conversation clarify what you're after, why speaking out loud often works better than typing</li>
+            <li>A few simple principles for orienting yourself — how to think about context, how to let the conversation clarify what you're after, why speaking out loud often works better than typing</li>
             <li>A first look at building a simple life system grounded in your values and intentions</li>
             <li>A live exploration together: you'll leave having felt what this can actually do</li>
         </ul>
